--- a/Test_Testing/Test_Testing.csproj
+++ b/Test_Testing/Test_Testing.csproj
@@ -58,13 +58,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Midaxo.Event.SPDto\Midaxo.Event.Dto.csproj">
-      <Project>{5209FA6C-B5BF-4024-8A5A-FBD899996149}</Project>
-      <Name>Midaxo.Event.Dto</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Midaxo.Event.Test.Client\Midaxo.Event.Test.Client.csproj">
       <Project>{7e49dcf6-bd64-41c4-9c83-dfbc43dac9dc}</Project>
       <Name>Midaxo.Event.Test.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Midaxo.Event.Test.Dto\Midaxo.Event.Test.Dto.csproj">
+      <Project>{5209fa6c-b5bf-4024-8a5a-fbd899996149}</Project>
+      <Name>Midaxo.Event.Test.Dto</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
